{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 190,
  "lineage": "26db38d6-f254-b1a8-f6b0-974a2feaa04d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAt-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09308011d89ee3d94",
            "arn": "arn:aws:ec2:us-east-1:250502052604:elastic-ip/eipalloc-09308011d89ee3d94",
            "association_id": "eipassoc-05e169f909abec01d",
            "domain": "vpc",
            "id": "eipalloc-09308011d89ee3d94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05f41c6daf427e0ae",
            "private_dns": "ip-10-0-101-27.ec2.internal",
            "private_ip": "10.0.101.27",
            "public_dns": "ec2-3-213-103-82.compute-1.amazonaws.com",
            "public_ip": "3.213.103.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:250502052604:instance/i-0b4486afc6b6bef0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4486afc6b6bef0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6efdb668a7ba430",
            "private_dns": "ip-10-0-101-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.232",
            "public_ip": "54.227.195.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd5f53e9d5c89499",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0016e2e49b2f2396f",
            "tags": {
              "Name": "instancia"
            },
            "tags_all": {
              "Name": "instancia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0741627199370be99"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.security",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:internet-gateway/igw-0ab9d1cc338a2cf39",
            "id": "igw-0ab9d1cc338a2cf39",
            "owner_id": "250502052604",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09308011d89ee3d94",
            "association_id": "eipassoc-05e169f909abec01d",
            "connectivity_type": "public",
            "id": "nat-0703ad3fdf5798d19",
            "network_interface_id": "eni-05f41c6daf427e0ae",
            "private_ip": "10.0.101.27",
            "public_ip": "3.213.103.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0016e2e49b2f2396f",
            "tags": {
              "Name": "NAT gateway"
            },
            "tags_all": {
              "Name": "NAT gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-055a83431e2fcde98",
            "id": "rtb-055a83431e2fcde98",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0703ad3fdf5798d19",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-03958052b895c5ccc",
            "id": "rtb-03958052b895c5ccc",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab9d1cc338a2cf39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009ee2414d72611b9",
            "route_table_id": "rtb-055a83431e2fcde98",
            "subnet_id": "subnet-0691f74aeb81e0fb7"
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.nat-gateway-rt",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-privada",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adea3891e05f83bc",
            "route_table_id": "rtb-03958052b895c5ccc",
            "subnet_id": "subnet-0016e2e49b2f2396f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:security-group/sg-0741627199370be99",
            "description": "Security group para permitir SSH y HTTP/HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0741627199370be99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "seguridad",
            "name_prefix": "",
            "owner_id": "250502052604",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-0691f74aeb81e0fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0691f74aeb81e0fb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada"
            },
            "tags_all": {
              "Name": "subred-privada"
            },
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-0016e2e49b2f2396f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016e2e49b2f2396f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica"
            },
            "tags_all": {
              "Name": "subred-publica"
            },
            "vpc_id": "vpc-079906ab0e0e3c64a"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Desarrollo-web-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:vpc/vpc-079906ab0e0e3c64a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ed7beb468b9893a",
            "default_route_table_id": "rtb-03958052b895c5ccc",
            "default_security_group_id": "sg-0ad86b7b660222210",
            "dhcp_options_id": "dopt-0d5c4275442d0c4ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079906ab0e0e3c64a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03958052b895c5ccc",
            "owner_id": "250502052604",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}